Name:                rtree

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1.0

-- A short (one-line) description of the package.
Synopsis:            R-tree for hittesting in rectangles

-- A longer description of the package.
-- Description:         

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Gergo Erdi <http://gergo.erdi.hu/>

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          gergo@erdi.hu

-- A copyright notice.
-- Copyright:           

Category:            Data

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.6

source-repository head
  Type:     git
  Location: git://github.com/gergoerdi/rtree.git

Library
  hs-source-dirs:    src
  Exposed-modules:   Data.RTree
                       
  ghc-options:       -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-incomplete-patterns -fno-warn-unused-binds
                     -fno-warn-orphans

  Build-depends:     base >= 4.0, ghc == 6.12.*, mtl
